src/test/ui/suggestions/issue-45799-bad-extern-crate-rename-suggestion-formatting.stderr
error[E0259]: the name `std` is defined multiple times
  --> $DIR/issue-45799-bad-extern-crate-rename-suggestion-formatting.rs:11:1
   |
LL | extern crate std;
   | ^^^^^^^^^^^^^^^^^ `std` reimported here
   |
   = note: `std` must be defined only once in the type namespace of this module
help: You can use `as` to change the binding name of the import
   |
LL | extern crate std as other_std;
   |

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0259"
